--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -4531,6 +4531,8 @@ sup
 			font-size: 11px
 			letter-spacing: 0.4px
 			text-transform: uppercase
+			&:hover
+				color: $blue
 
 	&__policy
 		font-size: 12px
