--- a/source/dev/_/pages/article/article.pug
+++ b/source/dev/_/pages/article/article.pug
@@ -33,34 +33,36 @@ block content
 					p Стоимость отделочных работ составляет от 8% до 15% итоговых сметных сумм на капитальное строительство. В рамках реноваций и ремонтов отделка может занимать до 90% всех расходов. Поэтому снижение материалоемкости и доли дорогостоящего ручного трудам — один из самых мощных факторов экономической эффективности как для строителей, так и для владельцев недвижимости. 
 			.article__more.more
 				.more__title.h1 Прочитайте ещё:
-				.more__list.row
-					a.more__item(href="")
-						.more__head
-							.more__date 21.04.2021
-							.more__img
-								img(src="_/uploads/article-sample.png" alt="")
-						.more__body
-							.more__name Механизированная штукатурка стен
-							.more__icon
-								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
-					a.more__item(href="")
-						.more__head
-							.more__date 21.04.2021
-							.more__img
-								img(src="_/uploads/article-sample.png" alt="")
-						.more__body
-							.more__name Механизированная штукатурка стен
-							.more__icon
-								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
-					a.more__item(href="")
-						.more__head
-							.more__date 21.04.2021
-							.more__img
-								img(src="_/uploads/article-sample.png" alt="")
-						.more__body
-							.more__name Механизированная штукатурка стен
-							.more__icon
-								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+				.more__slider
+					.more__list.row
+						a.more__item(href="")
+							.more__head
+								.more__date 21.04.2021
+								.more__img
+									img(src="_/uploads/article-sample.png" alt="")
+							.more__body
+								.more__name Механизированная штукатурка стен
+								.more__icon
+									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+						a.more__item(href="")
+							.more__head
+								.more__date 21.04.2021
+								.more__img
+									img(src="_/uploads/article-sample.png" alt="")
+							.more__body
+								.more__name Механизированная штукатурка стен
+								.more__icon
+									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+						a.more__item(href="")
+							.more__head
+								.more__date 21.04.2021
+								.more__img
+									img(src="_/uploads/article-sample.png" alt="")
+							.more__body
+								.more__name Механизированная штукатурка стен
+								.more__icon
+									<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+				+swipe('more', 'Чтобы посмотреть другие статьи, <br>проведите в сторону')
 
 	- classQuestions = '--pt'
 	include ../../parts/questions
