--- a/source/dev/_/sys/sass/responsive.sass
+++ b/source/dev/_/sys/sass/responsive.sass
@@ -3272,6 +3272,8 @@
 		padding-bottom: 0
 		.case
 			padding-bottom: 410px
+		&__content
+			max-width: 100%
 		&__title
 			text-align: center
 		&__subtitle
@@ -3396,7 +3398,7 @@
 			padding-bottom: 40px
 
 	.contacts-p
-		padding-bottom: 40px
+		padding-bottom: 30px
 
 	.contacts
 		&.--page
@@ -3611,10 +3613,19 @@
 			bottom: 0
 
 	.team
+		padding-bottom: 55px
+		padding-bottom: 0
 		&__title
 			margin-bottom: 35px
 			br
 				display: none
+		&__slider
+			overflow: visible
+		&__item
+			width: 180px
+		&__swipe
+			border-bottom: none
+
 
 	.order
 		padding-top: 260px
@@ -3624,10 +3635,12 @@
 			flex-direction: column
 		&__img-wrap
 			z-index: -1
-			right: 15px
-			top: 160px
+			right: 50%
+			top: 140px
 			order: 2
 			width: 225px
+			margin-right: -68px
+			transform: translateX(50%)
 			position: absolute
 		&__img
 			margin-left: 0
@@ -3635,17 +3648,27 @@
 			left: -100px
 		&__content
 			order: 1
+			width: 100%
+			max-width: 100%
+			margin-left: auto
+			margin-right: auto
 		&__title, &__subtitle
 			text-align: center
+			max-width: 310px
+			margin-left: auto
+			margin-right: auto
 		&__title
 			margin-bottom: 10px
+		&__subtitle
+			font-size: 15px
+			letter-spacing: 0
 		&__inner
 			background: #fff
 			box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
 			border-radius: 8px
-			max-width: 350px
+			max-width: 100%
 			width: 100%
-			margin-top: 270px
+			margin-top: 290px
 			margin-left: auto
 			margin-right: auto
 			padding: 30px 15px
@@ -3704,6 +3727,11 @@
 				max-width: 200px
 				line-height: 23px
 
+	.article
+		&__img
+			height: 220px
+		&__content
+			padding-top: 25px
 	.t1
 		h1
 			font-size: 24px
@@ -3758,4 +3786,15 @@
 
 	.call
 		&__icon
+			display: none
+
+
+	.pagination
+		justify-content: center
+		align-items: center
+		&__prev
+			margin-right: 5px
+		&__next
+			margin-left: 5px
+		&__list
 			display: none
